--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -38,7 +38,8 @@ jobs:
                 name: Upload artifact
                 uses: actions/upload-pages-artifact@v1
                 with:
-                    path: './public'
+                    source: ./public
+                    destination: ./_site
             -
                 name: Deploy to GitHub Pages
                 id: deployment
