--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -38,8 +38,7 @@ jobs:
                 name: Upload artifact
                 uses: actions/upload-pages-artifact@v1
                 with:
-                    source: ./public
-                    destination: ./_site
+                    path: public/
             -
                 name: Deploy to GitHub Pages
                 id: deployment
